@@ -3,6 +3,8 @@ Stable 2.3.32
 	* Modification de l'ordre d'affichage des produits dans la partie public
 	* Fix bug requête invalid après suppression d'une image dans la micro galerie
 	* Correction orthographique dans la validation du plugin contact
+	* Ajout du système pour afficher un template avec fetch dans les plugins
+	* Correction de la longueur des champs de base de données (varchar) lors de l'installation (catalogue et cms)
 	
 Stable 2.3.31
 	* Suppression du système de licence pour compatibilité encodeur.
